# zmigrate

./: .gitignore  CLA.md  CLAUDE.md  CLAUDE.md.bak  Cargo.toml  LICENSE.md  README.md  run_dumps.sh  run_zcashd_dumps.sh  run_zingo_dumps.sh
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
docs/: README.md  attachments.md  bestpractices.md
src/: bdb_dump.rs  blob.rs  data.rs  digest.rs  digest_utils.rs  exec.rs  file_args.rs  lib.rs  main.rs  mod_use_macro.rs  parse_macro.rs  parser.rs  parsing.rs  seconds_since_epoch.rs  string_utils.rs  styles.rs  zcashd_cmd.rs  zingo_cmd.rs  zwl_cmd.rs
src/parser/: mod.rs  parse_macro.rs  parseable_types.rs  parsing.rs  prelude.rs
src/sapling/: mod.rs  sapling_expanded_spending_key.rs  sapling_extended_spending_key.rs
src/types/: blob.rs  compact_size.rs  data_macro.rs  mod.rs  string_macro.rs  txid.rs  u160_type.rs  u252_type.rs  u256_type.rs
src/zcashd/: KEYS.md  address.rs  bdb_dump.rs  bip_39_mnemonic.rs  block_locator.rs  branch_id.rs  client_version.rs  key.rs  key_id.rs  key_metadata.rs  key_pool.rs  keypair.rs  keys.rs  migrate.rs  mnemonic_hd_chain.rs  mnemonic_seed.rs  mod.rs  network_info.rs  orchard_note_commitment_tree.rs  parseable_types.rs  parsing.rs  priv_key.rs  pub_key.rs  receiver_type.rs  recipient_address.rs  recipient_mapping.rs  script_id.rs  seconds_since_epoch.rs  sprout_keys.rs  sprout_spending_key.rs  string.rs  transaction.rs  u160.rs  u160_type.rs  u252.rs  u252_type.rs  u256.rs  u256_type.rs  unified_account_metadata.rs  unified_accounts.rs  (+5 more)
src/zcashd/cmd/: mod.rs
src/zcashd/migrate/: accounts.rs  addresses.rs  keys.rs  migrate_to_zewif.rs  mod.rs  seed.rs  transactions.rs  tx_addresses.rs
src/zcashd/transaction/: int_id.rs  mod.rs  wallet_transaction.rs
src/zewif/: account.rs  address.rs  address_id.rs  amount.rs  anchor.rs  attachments.rs  bip39_mnemonic.rs  blob.rs  blob_macro.rs  block_height.rs  branch_id.rs  compact_size.rs  data.rs  data_macro.rs  derivation_info.rs  digest_utils.rs  expiry_height.rs  groth_proof.rs  identifiable.rs  impl_attachable_macro.rs  incremental_merkle_tree.rs  incremental_witness.rs  int_id.rs  join_split_description.rs  lock_time.rs  mnemonic_language.rs  mod.rs  mod_use_macro.rs  network.rs  orchard_action_description.rs  orchard_sent_output.rs  orchard_witness.rs  parseable_types.rs  phgr_proof.rs  position.rs  sapling_output_description.rs  sapling_sent_output.rs  sapling_spend_description.rs  sapling_witness.rs  script.rs  (+23 more)
src/zingo/: block_data.rs  capability.rs  era.rs  extended_key_attrs.rs  keystore.rs  legacy_extended_private_key.rs  legacy_extended_public_key.rs  mod.rs  receiver_selection.rs  sapling_diversifiable_full_viewing_key.rs  typecode.rs  unified_full_viewing_key.rs  unified_keystore.rs  unified_spending_key.rs  version_1_keystore.rs  version_2_keystore.rs  versioned.rs  wallet_capability.rs  zingo_parser.rs  zingo_wallet.rs
src/zwl/: block.rs  data.rs  extended_keys.rs  keys.rs  lightclient.rs  mod.rs  orchard_data.rs  orchard_tree.rs  sapling_data.rs  transactions.rs  utils.rs  walletokey.rs  wallettkey.rs  walletzkey.rs  zwl_parser.rs  zwl_wallet.rs
tests/: test_address_migration.rs  test_dump.rs  test_incoming_viewing_keys.rs  test_transaction_assignment.rs  test_tree_size.rs  test_unified_address_migration.rs  test_utils.rs  test_wallet_decryption.rs  test_witness_data.rs
(+113 files in other folders)
