[package]
name = "zmigrate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
hex = "0.4.3"
owo-colors = "4.1.0"
sha2 = "^0.10.6"
clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anstyle = "^1.0.1"
sapling-crypto = "0.5.0"
zl_zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", package = "zcash_primitives" }
zl_zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [
    "lightwalletd-tonic",
    "orchard",
    "transparent-inputs",
], package = "zcash_client_backend" }
zl_zcash_keys = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
], package = "zcash_keys" }
zl_zcash_encoding = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", package = "zcash_encoding" }

zcash_primitives = { version = "0.20.0", features = ["transparent-inputs"] }
zcash_encoding = "0.2.2"
zcash_keys = { version = "0.5.0", features = [
    "transparent-inputs",
    "sapling",
    "orchard",
] }
zcash_client_backend = { version = "0.15.0", features = [
    "transparent-inputs",
    "orchard",
] }

prost = { version = "0.13.5", features = ["prost-derive"] }
orchard_old = { package = "orchard", version = "=0.3.0" }
orchard_new = { package = "orchard", version = "0.10.1" }
sapling = { package = "sapling-crypto", version = "0.3", default-features = false }
incrementalmerkletree = "0.3.1"
zcash_protocol = "0.5.0"
zingolib = { git = "https://github.com/zingolabs/zingolib.git", rev = "965e81228d3a1d99b76c1e3c71202d8fdbbd41dc", features = [
    "test-elevation",
] }
append-only-vec = { git = "https://github.com/zancas/append-only-vec.git", branch = "add_debug_impl" }
byteorder = "1.5.0"
bip0039 = "=0.11.0"
secp256k1 = "0.30.0"
jubjub = "0.10.0"
ripemd = "0.1.3"
test-case = "3.3.1"
crypto_box = "0.9.1"
sodiumoxide = "0.2.7"
ring = "0.17.14"
lazy_static = "1.5.0"
base58 = "0.2.0"

[features]
default = []
with-context = []
