[package]
name = "zmigrate"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zmigrate"
path = "src/main.rs"

[dependencies]
zewif = { path = "../zewif" }
zewif-zcashd = { path = "../zewif-zcashd" }
zewif-zingo = { path = "../zewif-zingo" }
zewif-zwl = { path = "../zewif-zwl" }

anyhow = "1.0.95"
hex = "0.4.3"
owo-colors = "4.1.0"
clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anstyle = "^1.0.1"

[dev-dependencies]
regex = "1.10.2"

[features]
default = []
with-context = []
